[gd_scene load_steps=42 format=2]

[ext_resource path="res://scripts/hurt_box.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/attack/attack_1.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/attack/attack_5.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/attack/attack_6.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/attack/attack_2.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/hurt/hurt_3.png" type="Texture" id=6]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/attack/attack_4.png" type="Texture" id=7]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/exhausted/exhausted_1.png" type="Texture" id=8]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/hurt/hurt_1.png" type="Texture" id=9]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/hurt/hurt_2.png" type="Texture" id=10]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/attack/attack_3.png" type="Texture" id=11]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/exhausted/exhausted_2.png" type="Texture" id=12]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/exhausted/exhausted_3.png" type="Texture" id=13]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/hurt/hurt_4.png" type="Texture" id=14]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/exhausted/exhausted_5.png" type="Texture" id=15]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/exhausted/exhausted_6.png" type="Texture" id=16]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/exhausted/exhausted_4.png" type="Texture" id=17]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/hurt/hurt_5.png" type="Texture" id=18]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/hurt/hurt_6.png" type="Texture" id=19]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/idle/idle_1.png" type="Texture" id=20]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/idle/idle_2.png" type="Texture" id=21]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/idle/idle_3.png" type="Texture" id=22]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/idle/idle_4.png" type="Texture" id=23]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/idle/idle_5.png" type="Texture" id=24]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/idle/idle_6.png" type="Texture" id=25]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/walk/walk_1.png" type="Texture" id=26]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/walk/walk_2.png" type="Texture" id=27]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/walk/walk_5.png" type="Texture" id=28]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/walk/walk_6.png" type="Texture" id=29]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/walk/walk_3.png" type="Texture" id=30]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/sprites/walk/walk_4.png" type="Texture" id=31]
[ext_resource path="res://assets/characters/npcs/enemies/enemy_squirrel/scripts/enemy_squirrel.gd" type="Script" id=32]
[ext_resource path="res://assets/characters/transforms/fragments.wav" type="AudioStream" id=33]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18, 33.2351 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 33.2351 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.625
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "exhausted"
length = 0.625
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 16 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.625
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 19 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.625
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
length = 0.625
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 28 ), ExtResource( 29 ) ]
}

[node name="EnemySquirrel" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.235 )
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="FloorDetection" type="RayCast2D" parent="Sprite"]
position = Vector2( -19.4921, 0 )
enabled = true

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 7.23511 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 2 )
anims/exhausted = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )

[node name="LeftRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -100, 0 )

[node name="RightRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
